# PetVideoClip

./: .gitignore  README.md  main.py  pyproject.toml
3191251-uhd_4096_2160_25fps/: 3191251-uhd_4096_2160_25fps_superanimal_quadruped_fasterrcnn_resnet50_fpn_v2_hrnet_w32.h5  3191251-uhd_4096_2160_25fps_superanimal_quadruped_snapshot-fasterrcnn_resnet50_fpn_v2-004_snapshot-hrnet_w32-004.h5
854132-hd_1920_1080_25fps/: 854132-hd_1920_1080_25fpsDLC_snapshot-1000_meta.pickle  854132-hd_1920_1080_25fpsDLC_snapshot-700000.h5  854132-hd_1920_1080_25fpsDLC_snapshot-700000_meta.pickle
src/: ImageOverlay.py  __init__.py  clip_video.py  text_overlay.py
